Moderação de conteúdo inapropriado usando IA.

--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ DB_PASS=
 # Google reCAPTCHA #
 reCAPTCHA_public_key = "YOUR_SITE_KEY"
 reCAPTCHA_secret_key = "YOUR_SECRET_KEY"
+
+# imagga - https://imagga.com/profile/dashboard
+IMAGGA_API_KEY    = "YOUR_API_KEY"
+IMAGGA_API_SECRET = "YOUR_API_SECRET"
