--- a/.env
+++ b/.env
@@ -1,20 +1,19 @@
-# Application Settings #
-APP_URL  = "http://localhost/divulgazap/public"
-APP_NAME = "DivulgaZAP"
-APP_LOGO = "logo.png"
+# App Settings #
+APP_URL              = "http://localhost:8080"
+APP_NAME             = "DivulgaZAP"
+APP_LOGO             = "/assets/images/logos/logo.png"
+APP_TIMEZONE         = "America/Sao_Paulo"
+APP_LANGUAGE_DEFAULT = "pt-BR"
 
-# MySQL Database Connection #
+# Database Connection #
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=divulgazap 
 DB_USER=root
 DB_PASS=
+DB_SANITIZE_OUTPUT_DATA = false # se definido como "true", sanitizará todos os dados de saída do banco de dados.
 
 # Google reCAPTCHA #
 reCAPTCHA_public_key = "YOUR_SITE_KEY"
 reCAPTCHA_secret_key = "YOUR_SECRET_KEY"
-
-# imagga - https://imagga.com/profile/dashboard
-IMAGGA_API_KEY    = "YOUR_API_KEY"
-IMAGGA_API_SECRET = "YOUR_API_SECRET"
