--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,24 @@
 {
+    "name": "hnqca/divulgazap",
+    "description": "Aplicação web desenvolvida com o propósito de compartilhar e descobrir novos grupos do WhatsApp",
+    "type": "project",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "App",
-            "HenriqueCacerez\\MasterPDO\\": "App/Database"
-        }
+            "App\\": "App"
+        },
+        "files": ["App/config/config.php"]
+    },
+    "scripts": {
+        "build": "composer install --no-dev --optimize-autoloader"
     },
     "require": {
-        "coffeecode/router": "^2.0",
         "twig/twig": "^3.6",
         "vlucas/phpdotenv": "^5.5"
-    }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
