--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hnqca/divulgazap",
+    "name": "hnqca/divulgazap-php",
     "description": "Aplicação web desenvolvida com o propósito de compartilhar e descobrir novos grupos do WhatsApp",
     "type": "project",
     "license": "MIT",
